outputs/condor.error
<<<<<<< HEAD
Could not find conda environment: 573-project
You can list all discoverable environments with `conda info --envs`.

  File "src/ensemble.py", line 23
    def __init__(self, roberta_config_path: str, forest_config_path: str, logreg_config_path: str) -> None:
                                          ^
SyntaxError: invalid syntax
=======
/home2/apai3/ling573/src/finetune_dataset.py:24: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).
  item = {key: torch.tensor(val[index]) for key, val in self.encodings.items()}
Traceback (most recent call last):
  File "/home2/apai3/ling573/src/ensemble.py", line 184, in <module>
    main(args)
  File "/home2/apai3/ling573/src/ensemble.py", line 162, in main
    train_ensemble(ensemble_model, train_feature_vector, train_labels, train_data, device)
  File "/home2/apai3/ling573/src/ensemble.py", line 82, in train_ensemble
    print(batch.shape())
AttributeError: 'dict' object has no attribute 'shape'
>>>>>>> c2ef224 (debugging pytorch embedding size error)
